# Helia

./: Cargo.toml  README.md
doc/diagrams/: architecture_overview.drawio
helia-backend/src/: lib.rs
helia-backend/src/model/: common.rs
helia-backend/src/storage/: sqlite_storage.rs
helia_backend/: .gitignore  Cargo.toml
helia_backend/src/: core.rs  storage.rs  test_utils.rs
helia_backend/src/core/: helia_error.rs  helia_prod.rs  requests.rs
helia_backend/src/model/: action.rs
helia_backend/src/model/action/: acion_create_date.rs  action_name.rs
helia_backend/src/storage/: migration.rs  storage_error.rs
helia_frontend/: README.md  pubspec.yaml
helia_frontend/android/app/: build.gradle.kts
helia_frontend/ios/Runner/: Info.plist
helia_frontend/ios/Runner.xcodeproj/: project.pbxproj
helia_frontend/linux/: CMakeLists.txt
helia_frontend/linux/runner/: my_application.cc
helia_frontend/macos/Runner.xcodeproj/: project.pbxproj
helia_frontend/test/: widget_test.dart
helia_frontend/web/: index.html  manifest.json
helia_frontend/windows/: CMakeLists.txt
helia_frontend/windows/runner/: Runner.rc  main.cpp
migrations/: 001_initial.sql
src/: api.rs  lib.rs  main.rs  model.rs  storage.rs  test_utils.rs
src/api/: helia_error.rs  helia_gtd.rs  helia_impl.rs
src/model/: action.rs  common.rs
src/model/action/: acion_create_date.rs  action_id.rs  action_name.rs
src/model/common/: create_date.rs  date.rs  id.rs
src/storage/: migration.rs  sqlite_storage.rs  storage_error.rs
src/tests/: support.rs
tests/: common.rs
(+7 files in other folders)
