[package]
name = "helia"
version = "0.1.0"
edition = "2024"

[dependencies]
# For working with time
chrono = "0.4.41"

# SQLite for Rust 
rusqlite = { version = "0.37.0", features = ["bundled", "uuid"] }

# Convenient error handling
thiserror = "2.0.12"

# Lets you generate random UUIDs
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4"
]
